--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,7 +11,4 @@ sphinx:
 python:
   version: 3.7
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
