--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -31,5 +31,6 @@ body:
         - 0.1.0
         - 0.1.1
         - 0.1.2 (Latest)
+        - 0.2.0 (alpha-release)
     validations:
       required: true
