--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -12,9 +16,9 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
 
-      - name: Install & UpdateDependencies
+      - name: Install & Update Dependencies
         run: |
           pip install --upgrade pip wheel
           pip install black mypy
@@ -22,4 +26,4 @@ jobs:
       - name: Type Checker
         run: |
           mypy cli
-          black -S --check cli
+          black -S --check cli -l 120
