--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,4 @@ updates:
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: "weekly"
-  open-pull-requests-limit: 10
+    interval: daily
