Thataint how you use a workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       matrix:
         os: ['macos-latest', 'windows-latest', 'ubuntu-latest']
         pyver: ['3.6', '3.7', '3.8', '3.9', '3.10']
+    runs-on: ${{ matrix.os }}
     steps:
       runs-on: ${{ matrix.os }}
       timeout-minutes: 5
