--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,14 +1,19 @@
 version: 2
+formats: []
 
 build:
-  image: stable
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.8"
 
 sphinx:
-    configuration: docs/conf.py
-    fail_on_warning: false
-    builder: html
+  configuration: docs/conf.py
+  fail_on_warning: false
+  builder: html
 
 python:
-  version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
