Move test job to tox and attempt to use tox-gh

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,39 +2,15 @@ name: "CI"
 
 on: [push, pull_request]
 
+concurrency:
+  group: check-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
-  job:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
-      - name: Install & Update Dependencies
-        run: |
-          pip install --upgrade pip wheel
-          pip install black isort mypy twine codespell
-      
-      - name: Run black-mypy-codespell-isort
-        run: |
-          mypy cli
-          black --check cli/ tests/
-          isort --check cli/ tests/
-          codespell cli
-      
-      - name: Run twine checker
-        run: |
-          rm -rf dist/*
-          python3 setup.py sdist
-          twine check dist/*
-  
   test:
     strategy:
+      fail-fast: false
       matrix:
         os: ['windows-latest', 'ubuntu-20.04']
         pyver: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
@@ -49,4 +25,4 @@ jobs:
           python-version: ${{ matrix.pyver }}
       
       - name: Install and run tox
-        run: pip install -e . && pip install -U tox tox-gh
+        run: pip install -e . && pip install -U tox tox-gh && tox -vv --notest && tox --skip-pkg-install
