--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, lint, mypy
-isolated_build = true
+envlist = py36, py37, py38, py39, py310, py311, check
 skip_missing_intrepeters = true
 
 [gh-actions]
 python =
-    3.6: py36, lint, mypy
+    3.6: py36, check
     3.7: py37
     3.8: py38
     3.9: py39
@@ -20,15 +19,12 @@ deps = pytest
 commands =
     pytest --basetemp={envtmpdir}
 
-[testenv:lint]
+[testenv:check]
 basepython = python3.6
-deps = ruff, black, isort
+deps = ruff, black, isort, codespell, mypy
 commands = 
     ruff tests/ cli/
     black --check cli/ tests/
     isort --check cli/ tests/
-
-[testenv:mypy]
-basepython = python3.6
-deps = mypy
-commands = mypy cli/
+    codespell cli/ tests/
+    mypy cli/
