--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ concurrency:
 
 jobs:
   test:
+    name: CI on ${{ matrix.pyver }} on ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -18,6 +19,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+
+      - name: Cache .tox directory
+        uses: actions/cache@v2
+        with:
+          path: '.tox'
+          key: ${{ matrix.os }}-${{ matrix.pyver }} }}-1
     
       - name: Setup Python
         uses: actions/setup-python@v4
