Remove py36 test Due to some errors with tox and py36

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, check
+envlist = py37, py38, py39, py310, py311, check
 skip_missing_intrepeters = true
 
 [gh-actions]
@@ -13,7 +13,6 @@ python =
 
 
 [testenv]
-passenv = PYTHON_VERSION
 setenv =
     PYTHONPATH = {toxinidir}
 deps = pytest
