--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,12 @@ commands =
 
 [testenv:check]
 basepython = python3.7
-deps = ruff, black, isort, codespell, mypy
+deps = 
+    ruff 
+    black
+    isort
+    codespell
+    mypy
 commands = 
     ruff tests/ cli/
     black --check cli/ tests/
